leave only sim network channel
Signed-off-by: Nikita Lebedev <nikita.lebedev@limechain.tech>